--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,8 @@ steps:
     sudo apt install software-properties-common
     sudo add-apt-repository ppa:deadsnakes/ppa
     sudo apt install python3.8
+    sudo apt-get install python-pip
+    sudo pip install selenium
     
   displayName: 'Install dependencies'
 
