--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     sudo add-apt-repository ppa:deadsnakes/ppa
     sudo apt install python3.8
     sudo apt-get install python-pip
-    sudo pip install selenium
+    sudo apt install selenium
     
   displayName: 'Install dependencies'
 
