--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,12 +24,12 @@ steps:
     sudo apt install software-properties-common
     sudo add-apt-repository ppa:deadsnakes/ppa
     sudo apt install python3.8
-    sudo apt-get install python-pip
-    sudo apt install selenium
+    sudo apt-get install python-pip    
     
   displayName: 'Install dependencies'
 
 - script: |
+    pip install selenium
     pip install pytest pytest-azurepipelines
     pytest -v -s
   displayName: 'pytest'
