Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ steps:
 
 - script: |
     pip install selenium
+    pip install pyautogui
     pip install pytest pytest-azurepipelines
     pytest -v -s
   displayName: 'pytest'
