Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,5 +31,6 @@ steps:
 - script: |
     pip install selenium
     pip install pytest pytest-azurepipelines
+    pip install openpyxl
     pytest -v -s
   displayName: 'pytest'
