--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 strategy:
   matrix:
     Python38:
@@ -32,6 +32,6 @@ steps:
     pip install selenium
     pip install pytest pytest-xvfb pytest-azurepipelines
     pip install openpyxl
-    pip install chromedriver-py
+    pip install chromedriver
     pytest -v -s
   displayName: 'pytest'
