Update azure-pipelines-WindowsAgent.yml for Azure Pipelines

--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -29,5 +29,5 @@ steps:
 
 - script: |
     pip install pytest pytest-azurepipelines
-    pytest
+    pytest --html=reportWindows.html
   displayName: 'pytest'
