--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -15,11 +15,13 @@ strategy:
       python.version: '3.9'
 
 steps:
-  - task: UsePythonVersion@0
+  - task: UsePythonVersion@0               
+  # For self hosted agents 
     inputs:
       versionSpec: '3.9'
       addToPath: true
       architecture: 'x64' # Options: x86, x64 (this argument applies only on Windows agents)
+# For microsoft hosted agents
 # - task: UsePythonVersion@0
 #   inputs:
 #     versionSpec: '$(python.version)'
