--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -28,7 +28,7 @@ steps:
     displayName: 'Use Python $(python.version)'
 
   - script:
-      python -m pip install --upgrade pip
+      #python -m pip install --upgrade pip
       pip install selenium
       pip install openpyxl
       pip install chromedriver
