--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -29,7 +29,7 @@ steps:
 
   - script:
       
-      #python -m pip install --upgrade pip
+      python -m pip install --upgrade pip
       pip install selenium
       pip install openpyxl
       pip install chromedriver
