Added task for whitesource bolt to code scan

--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -41,3 +41,7 @@ steps:
   - script: |
       pytest --html=report.html
     displayName: 'pytest'
+
+  - task: WhiteSource Bolt@20
+    inputs:
+      cwd: 'SeleniumAutomation'
