Update azure-pipelines-WindowsAgent.yml for Azure Pipelines

--- a/azure-pipelines-WindowsAgent.yml
+++ b/azure-pipelines-WindowsAgent.yml
@@ -54,7 +54,7 @@ steps:
         # sonar.exclusions=**/*.bin
         sonar.python.coverage.reportPath=*.coverage.xml
   
-  - bash: 'pytest --junitxml=$(Build.StagingDirectory)/test.xml --cov --cov-report=xml --cov-report=html' 
+  - bash: 'pytest --junitxml=$(Build.StagingDirectory)/test.xml' 
     workingDirectory: '.'
     displayName: 'Run tests with code coverage'
     continueOnError: true
